# qd-browser

./: .env.example  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  main.py  pyproject.toml
skills/baidu-search/: SKILL.md
skills/qd-browser/: SKILL.md  skill.json
skills/qd-browser/scripts/: crawl.py
src/qd_browser/: __init__.py  browser.py  cli.py  config.py  crawler.py  downloader.py  history.py  llm.py  parser.py  search.py  utils.py
