[project]
name = "qd-browser"
dynamic = ["version"]
description = "基于 Playwright 的综合爬虫 CLI 工具"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "juzcn"}
]
keywords = ["crawler", "browser", "playwright", "cli", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.50.0",
    "typer>=0.15.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.13.0",
    "html2text>=2024.2.26",
    "rich>=13.9.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "tldextract>=5.3.1",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "openai>=1.50.0",
]

[project.scripts]
qd-browser = "qd_browser.cli:app"

[project.urls]
Homepage = "https://github.com/juzcn/qd-browser"
Repository = "https://github.com/juzcn/qd-browser.git"
Issues = "https://github.com/juzcn/qd-browser/issues"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/qd_browser/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/qd_browser/**/*.py", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/qd_browser"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "hatchling>=1.26.0",
 "build>=1.2.0",
 "twine>=6.2.0",
]
